--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             </div>
             <div class="col-md-6">
                 <div class="input-section half-width">
-                    <input class="form-control" type="text">
-                    <div class="numbers">
+                    <input id="calculator-value" class="form-control" type="text">
+                    <div id="calculator-parent" class="numbers">
                         <div class="calc-body">
                             <div class="calc-button-row">
                               <div class="button">7</div>
