--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
                                 <div class="button">C</div>
                             </div>
                             <div>
-                                <button type="submit" class="submit-btn">Submit</button>
-                                <p class="action-left">3 try left</p>
+                                <button id="submit-button" type="submit" class="submit-btn">Submit</button>
+                                <p id="tryParent" class="action-left"><span id="try">3</span> try left</p>
                             </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="notify-section">
-            <p class="notify">❌ Pin Didn't Match, Please try again</p>
-            <p class="notify">✅ Pin Matched... Secret door is opening for you</p>
+            <p id="not-match" class="notify d-none">❌ Pin Didn't Match, Please try again</p>
+            <p id="matching" class="notify d-none">✅ Pin Matched... Secret door is opening for you</p>
         </div>
     </div>
 
